--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "convex": "^1.27.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.22",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
