Add accordion component to OrderDetailsContent for improved order metadata display and user interaction. Integrate Radix UI accordion for better organization of order details, including payment, delivery, and item information.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-slot": "^1.2.3",
     "@types/canvas-confetti": "^1.9.0",
     "canvas-confetti": "^1.9.4",
